manifests/base/resources/sharing/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sharing
    chart: sharing-1.4.20
    heritage: Helm
    release: sharing
  name: sharing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sharing
      release: sharing
  template:
    metadata:
      labels:
        app: sharing
        chart: sharing-1.4.20
        heritage: Helm
        release: sharing
        sharing-nats-client: "true"
    spec:
      containers:
        - args:
            - server
            - --environment=k8s
            - --disableapi=false
            - --listenport=8787
            - --svc=$(PREFIX)-sharing
            - --nojwtvalidation=false
            - --jwksuri=$(KEYS_URI)/v1/keys/qlik.api.internal
            - --jwtaud=qlik.api.internal
            - --jwtiss=qlik.api.internal
          image: qliktech-docker.jfrog.io/sharing:3.0.72
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /health
              port: 8787
            initialDelaySeconds: 30
            timeoutSeconds: 5
          name: main
          ports:
            - containerPort: 8787
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /ready
              port: 8787
            initialDelaySeconds: 30
            timeoutSeconds: 5
          resources:
            limits:
              cpu: "0"
              memory: "0"
            requests:
              cpu: "0"
              memory: "0"
          volumeMounts:
            - mountPath: /qlik/sharingsvc-storage
              name: sharing-files
              readOnly: false
      imagePullSecrets:
        - name: artifactory-docker-secret
      volumes:
        - name: sharing-files
          persistentVolumeClaim:
            claimName: sharing
---
