manifests/base/resources/sharing/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8787"
    prometheus.io/scrape: "true"
  labels:
    app: sharing
    chart: sharing-1.4.19
    heritage: Helm
    release: sharing
  name: sharing
spec:
  ports:
    - name: sharing
      port: 8787
      protocol: TCP
      targetPort: 8787
  selector:
    app: sharing
    release: sharing
  type: ClusterIP
---
