manifests/base/resources/sharing/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://sharing-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      set $host_and_uri $http_host$request_uri;
      if ( $host_and_uri ~* "^.{2049,}$" ) { return 414; }
      if ( $request_uri ~* "^.*/files/.*$") {
          more_set_headers 'Cache-Control: private, must-revalidate, max-age=0';
          more_set_headers 'Expires: Mon, 01 Jan 0001 00:00:00 GMT';
          more_set_headers 'Pragma: no-cache';
      }
      rewrite (?i)/api/v1/(.*) /v1/$1 break;
      more_clear_input_headers "X-Forwarded-Host" "X-Forwarded-For" "X-Forwarded-Proto" "X-Original-URI" "X-Original-URL";
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
  labels:
    app: sharing
    chart: sharing-1.4.18
    heritage: Helm
    release: sharing
  name: sharing
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: sharing
              servicePort: 8787
            path: /api/v1/sharing
          - backend:
              serviceName: sharing
              servicePort: 8787
            path: /api/v1/alerting
---
